--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="frame/bootstrap-3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="js/fullpage.js/dist/jquery.fullpage.css">
     <link rel="stylesheet" type="text/css" href="css/default.css">
-    <link rel='stylesheet prefetch' href='http://www.jq22.com/jquery/font-awesome.4.6.0.css'>
+    <link rel='stylesheet prefetch' href='frame/font-awesome-4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
