--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
+    <title>王海亮</title>
 
     <!-- Bootstrap -->
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="frame/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fakeLoader.css">
     <link rel="stylesheet" href="js/fullpage.js/dist/jquery.fullpage.css">
     <link rel="stylesheet" type="text/css" href="css/default.css">
     <link rel='stylesheet prefetch' href='frame/font-awesome-4.7.0/css/font-awesome.min.css'>
@@ -34,6 +35,13 @@
 <body >
 <!-------导航栏-------->
 
+<div class="container">
+
+    <div class="fakeloader" >
+
+    </div>
+
+</div>
 
 <nav class="navbar navbar-fixed-top my-navbar" role="navigation">
     <div class="container-fluid">
@@ -342,6 +350,7 @@
 
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="frame/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="js/fakeLoader.min.js"></script>
 
     <script src="js/fullpage.js/vendors/jquery.easings.min.js"></script>
     <script src="js/fullpage.js/dist/jquery.fullpage.js"></script>
