--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="content">
                 <div id="large-header" class="large-header">
                     <canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title">UI <span class="thin">DESIGN</span></h1>
+                    <h1 class="main-title"><span class="thin">DESIGN</span></h1>
                 </div>
 
             </div>
